# Argante

./: README.md
A2/: .cvsignore  .gdbinit  COPYING  ChangeLog  Makefile.in  TODO  autocfg.h.in  configure  configure.ac  img.mk  wincfg.h
A2/Documentation/: .cvsignore  INDEX  Makefile.in  alib.txt  appdevel.tex  commentgrep.l  common.tex  icons.rc  kdesign.tex  kernel.txt  modules.txt  nagt.tex  native.txt  syscall.tex
A2/Documentation/syscall/: alib.tex  cfd.tex  display.tex  fs.tex  locallib.tex  strfd.tex
A2/LAC/: .cvsignore  LAC  Makefile.in  README  alib.lh  alib1.lac  alib2.lac  blaargh.lac  cfd.lh  check.c  codegen.c  codegen.h  dir.lac  display.lh  error.c  error2.lac  fs.lh  function.h  hello.lac  hello2.lac  local.lh  lstring.c  lstring.h  main.h  main.l  mainp.c  misclib.lac  parser.c  parser.h  parser.y  ptrs.lac  rename.lac  stm.c  strfd.lh  todayis.lac  tree.h  type.c  var.c  yaccer.c  zilch.lac
A2/agent/: Makefile.in  flexsock.c  vconsole.c
A2/bench/: .cvsignore  Makefile.in  control.agt  crealloc.agt  define.agt  dynstr.agt  float.agt  fs.agt  fsstress.agt  integer.agt  memory.agt  perfectcontrol.c  rename.agt  rotest.agt  sleeper.agt  strfd.agt
A2/compat/: Makefile.in  alloca.h  bzero.c  bzero.h  getline.c  getline.h  io.h  limits.h  ltime_r.c  ltime_r.h  semaphr.c  semaphr.h  strcmpi.c  strcmpi.h  strncmpi.c  strncmpi.h  strtok_r.c  strtok_r.h  time.h  usleep.c  usleep.h
A2/compiler/: .cvsignore  Makefile.in  blobstak.c  blobstak.h  cify.c  control.a2  imgdump.c  imgstrip.c  link.c  nagt.c  nagt.h
A2/conf/: bench.HAC  lac.HAC  lib.HAC
A2/conf/scripts/: argboot.scr  modrace.scr
A2/fs/: AddDateHere
A2/fs/ftp/: Entries  Repository  Root  SomeBogusFile
A2/include/: Makefile.in  amemory.h  anyval.h  bcode.h  bcode_op.h  bformat.h  cfdop.h  cmd.h  cmdtabs.h  command.h  config.h  data_blk.h  exception.h  file.h  flexsock.h  hhac.h  imageman.h  jitgen.pl  lang2.h  modload.h  module.h  opcodes.h  printk.h  symman.h  taskman.h  vfd.h  xgen.pl  xlist.h
A2/kernel/: .cvsignore  HAC  Makefile.in  bcode.c  cmd.c  file.c  foldtest.c  hhac.c  hhactest.c  imageman.c  manager.c  memory.c  printk.c  symman.c  syscall.c  vfd.c
A2/lib/: .cvsignore  Makefile.in  linktst1.agt  linktst2.agt  nosyms.agt  rtlink.agt  rtlink2.agt  rtlink3.agt  rtlink4.agt  undef.agt
A2/modules/: .cvsignore  Makefile.in  alib.c  alib.h  alib.sc  asyscall.h  cfd.c  cfd.h  cfd.sc  console.c  console.h  console.sc  display.c  display.h  display.sc  dummy.c  dummy.h  dummy.sc  dynamic.c  examplemodule.c  fs.c  fs.h  fs.sc  locallib.c  locallib.h  locallib.sc  scgen.pl  statcgen.sh  strfd.c  strfd.h  strfd.sc
Argante/: .cvsignore  .gitignore  .valid-arch  CMakeLists.txt  Makefile  build  make-links.sh
Argante/Documentation/: Advocacy  BUGS  ChangeLog  MIRRORS  People  Portability  README  TODO
Argante/Documentation/ideas/: inadEquate.txt  oo-language.txt  performance.txt
Argante/Documentation/man/: acc.1  agtback.1  agtc.1  agtproj.1  agtses.1  ahlt.1  argante.1  elim.1
Argante/Documentation/source/: 0000-admin  0000-cluster  0000-cluster.tag  0000-concept  0000-concept.tag  0000-devel  0000-examples  0000-examples.tag  0000-first  0000-full  0000-full.tag  0000-hybrid  0000-hybrid.tag  0000-internal  0000-internal.tag  0000-sysprog  0001-admin  0002-admin  00100-advocacy  00100-advocacy.tag  00300-SMTA  00300-SMTA.tag  00400-VCPU  00400-VCPU.tag  00500-RSIS-opcodes  00500-RSIS-opcodes.tag  00600-exceptions  00600-exceptions.tag  00700-hac  00700-hac.tag  00800-svfs  00800-svfs.tag  00900-ipc  00900-ipc.tag  01000-scripts  01000-scripts.tag  01100-ahlt-tut  01100-ahlt-tut.tag  01200-rsis-tut  01200-rsis-tut.tag  (+60 more)
Argante/Documentation/www/: AgtDoc.txt  concept.html  contribute.html  documentation.html  legal_notice.html  people.html
Argante/Examples/DVR/: README
Argante/Examples/DVR1/: README  net
Argante/Examples/DVR2/: README
Argante/compiler/: .cvsignore  CMakeLists.txt  Makefile  agtc.c  autogen.sh  language.h
Argante/compiler/benchmarks/: .cvsignore  control.agt  control.c  integer.agt  memory.agt
Argante/compiler/examples/: dir.agt  endian.agt  error2.agt  float.agt  fs.agt  gfx.agt  hello.agt  mem.agt  movb.agt  mstack.agt  sniffer.agt  tcp.agt
Argante/conf/: access.hac  ipc.conf
Argante/conf/scripts/: argboot.scr  test.scr  vga.scr
Argante/conf/template/: CHECKLIST  access.hac  ipc.conf
Argante/contrib/blinken/: blink.c
Argante/contrib/fortunes/: argante
Argante/contrib/highlight/: agt.syntax  agt.vim  argante-vim57.patch
Argante/contrib/pingwinaria/: Makefile  plansza0.txt  plansza1.txt  plansza10.txt  plansza11.txt  plansza12.txt  plansza13.txt  plansza14.txt  plansza15.txt  plansza16.txt  plansza17.txt  plansza2.txt  plansza3.txt  plansza4.txt  plansza5.txt  plansza6.txt  plansza7.txt  plansza8.txt  plansza9.txt  player  player.c
Argante/fs/mini-http/: index.html  test
Argante/fs/tests/: AddDateHere
Argante/hll/: .cvsignore  BIG_FAT_WARNING  CMakeLists.txt  Makefile  acc  ahlt.c  ahlt.h  elim  gfx.ahl  gfx.img
Argante/hll/examples/: console.ahl  dir.ahl  dir.img  gfx.ahl  hello.ahl  ptrs.ahl
Argante/hll/include/: access.ahh  advmem.ahh  display.ahh  fs.ahh  gfx.ahh  ggi.ahh  ipc.ahh  local.ahh  math.ahh  (+3 more)
Argante/include/: .cvsignore  acman.h  autogen.sh  bcode.h  bformat.h  cmd.h  config.h  console.h  debugger.h  evaluate.h  exception.h  linker.h  manager.h  memory.h  module.h  task.h
Argante/kernel/: .cvsignore  CMakeLists.txt  Makefile  acman.c  bcode.c  cmd.c  console.c  debugger.c  linker.c  main-boot.c  manager.c  module.c  task.c
Argante/modules/: CMakeLists.txt  Makefile  access.c  advmem.c  display.c  fs.c  gfx.c  ggi.c  ipc.c  locallib.c  math.c  network.c  packet.c  syscall.h
Argante/setup/: curses-test.c  ggi-test.c  gtk-test.c  svga-test.c
Argante/sysdep/: .oldchglog  Makefile.aix  Makefile.bsd  Makefile.irx  Makefile.lnt  Makefile.lnx  Makefile.sol  announce
Argante/tools/: .cvsignore  CMakeLists.txt  Makefile  actest.c  agtback  agtexe  agtexe.c  agtproj  agtses  binedit.c  disasm.c  vcpucons  vcpucons.c
(+221 files in other folders)
